--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
     <!-- Header -->
     <header>Header</header>
+    <h1>Testing code</h1>
 
     <!-- Main content -->
     <main>Main</main>
