add logo to header and apply oswald font

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 
 <body>
     <!-- Header -->
-    <header>Header</header>
-    <h1>Testing code</h1>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+
+    </header>
+    
 
     <!-- Main content -->
     <main>Main</main>
