--- a/index.html
+++ b/index.html
@@ -78,8 +78,47 @@
                         <div id="circle-cover-bg"></div>
                     </div>
             </div>
-
-
+        </section>
+        <!-- meet up times section -->
+        <section id="meetups">
+            <h2>Meet-up Times</h2>
+            <div id="times">
+                <div>
+                    <h3>URBAN <i class="fa-solid fa-city"></i></h3>
+                    <p>Monday</p>
+                    <p>5K</p>
+                    <p>The Market Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
+                    <p>Wednsday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>URBAN <i class="fa-solid fa-city"></i></h3>
+                    <p>Friday</p>
+                    <p>5K</p>
+                    <p>The Market Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
+                    <p>Saturday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>09:30</p>
+                </div>
+                <div>
+                    <h3>COFEE<i class="fa-solid fa-mug-hot"></i></h3>
+                    <p>Sunday</p>
+                    <p>0K</p>
+                    <p>The Market Hotel</p>
+                    <p>11:30</p>
+                </div>
+            </div>
         </section>
     </main>
 
