--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
                 <label for="email-address">Email Address</label>
                 <input type="email" id="email-address" name="email_address" class="text-input" required>
                 <br>
-                <div class="radio-buttons">
+                <div class="radio-button">
                     <div>
                         <label for="road">Road</label>
                         <input type="radio" id="road" name="running_preference" required>
